<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_group_scrolling">

    <LinearLayout
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <!--
         android:layout_marginBottom="@dimen/margin_12dp"
        android:layout_marginRight="@dimen/margin_12dp"
        android:layout_marginLeft="@dimen/margin_12dp"
        -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"

            android:background="@color/col_light" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/black_10" />
        <!-- android:background="?attr/selectableItemBackground"-->
        <RelativeLayout
            android:id="@+id/ivContactItem6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_selector"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin"

            android:visibility="gone">

            <ImageView
                android:id="@+id/ivContactItem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:focusableInTouchMode="true"
                android:src="@drawable/ic_go_live" />

            <TextView
                android:id="@+id/goLiveTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivContactItem5"
                android:layout_toRightOf="@+id/ivContactItem5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Go live With The Group"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black_70"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/goLiveTV"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem5"
                android:layout_toRightOf="@id/ivContactItem5"
                android:text="Home"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white_50"
                android:visibility="gone" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_10"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/col_light"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_10"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp">

            <TextView
                android:id="@+id/group_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_members"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/group_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0 OF 0"
                android:textColor="@color/black_overlay" />

        </RelativeLayout>

        <TextView
            android:id="@+id/addmember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:background="@drawable/default_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_add_member_primary"
            android:drawablePadding="@dimen/margin_32dp"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_12dp"
            android:text="@string/add_member"

            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black_10" />


        <ListView
            android:id="@+id/appcontacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <Button
            android:id="@+id/exit_grp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/dark_violet_btn_selector"
            android:text="@string/exit_group"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
